Opened 17 years ago

Closed 15 years ago

Last modified 15 years ago

#1453 closed bug (fixed)

[DiskProbe] can't copy data containing LF

Reported by: mmu_man Owned by: stpere
Priority: normal Milestone: R1
Component: Applications/DiskProbe Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If the data is a single line it can be copied to clipboard, but if it contains \n copy doesn't work.

Change History (3)

comment:1 by stpere, 15 years ago

Owner: changed from axeld to stpere
Status: newassigned

comment:2 by stpere, 15 years ago

Resolution: fixed
Status: assignedclosed

Hi, this should be fixed in hrev34192. In fact, the problem is broader I'm afraid. Pretty much any char into the dataview that is displayed as a "." should trigger this issue, even if it should often be considered as a valid UTF8 to be copied. I added an exception for EOL/LF, but I'm sure others should apply too.

comment:3 by stpere, 15 years ago

In hrev34193, the TAB and CR chars are now also allowed.

Note: See TracTickets for help on using tickets.