Diskprobe : in is_valid_utf8() :  * Accept EOL/LF as part of a valid UTF8 string.  * This allow a string containing it to be copied to the clipboard.  * Fixing ticket #1453.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34192 a95241bf-73f2-0310-859d-f6bbb57e9c96