src/apps/diskprobe/DataView.cpp
@@ -45,7 +45,7 @@ is_valid_utf8(uint8 *data, size_t size)
 
 		if ((data[i] & 0x80) == 0) {
 			// a single byte character
-			if (data[i] < ' ' || data[i] == 0x7f)
+			if (data[i] < ' ' && data[i] != 0x0a || data[i] == 0x7f)
 				return false;
 
 			continue;
